01-deployment-fabric.yml
# Copyright 2020 (c) Ayane Satomi
# Published under CC0-Universal.
#
#
# Keep in mind this configuration is domain-specific, some things may not work in your end.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fabric-suzuhara-deployment
  labels:
    app: fabric-suzuhara
    namespace: minecraft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fabric-suzuhara
  template:
    metadata:
      labels:
        app: fabric-suzuhara
    spec:
      containers:
      - name: fabric-suzuhara
        image: chinodesuuu/suzuhara-mc:v1.0.0
        ports:
        - containerPort: 25565
        volumeMounts:
        - name: mc-config
          mountPath: /minecraft/server.properties
        - name: world-pvc
          mountPath: /world
      volumes:
      - name: mc-config
        configMap:
          name: fabric-suzuhara-config
      - name: world-pvc
        persistentVolumeClaim:
          claimName: world-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: fabric-suzuhara-service
  namespace: minecraft
  annotations:
     mc.suzuhara.moe/deployment: minecraft
     mc.suzuhara.moe/stage: stable
spec:
  selector:
    app: fabric-suzuhara
  ports:
    - protocol: TCP
      port: 25565
      targetPort: 25565
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fabric-suzuhara-ingress
  namespace: minecraft
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: m0.puffy-kubestg.ml
    http:
       paths:
         - path: /
           backend:
             serviceName: fabric-suzuhara-service
             servicePort: 25565
