02-deployment-fabric-staging.yml
# Copyright 2020 (c) Ayane Satomi
# Published under CC0-Universal.
#
#
# Keep in mind this configuration is domain-specific, some things may not work in your end.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fabric-suzuhara-beta-deployment
  labels:
    app: fabric-suzuhara-beta
    namespace: minecraft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fabric-suzuhara-beta
  template:
    metadata:
      labels:
        app: fabric-suzuhara-beta
    spec:
      containers:
      - name: fabric-suzuhara-beta
        image: chinodesuuu/suzuhara-mc:master
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "3Gi"
            cpu: "2500m"
        ports:
        - containerPort: 25565
        volumeMounts:
        - name: world-pvc
          mountPath: /world
        - name: mc-config
          mountPath: /minecraft/server.properties
          subPath: server.properties
      volumes:
      - name: world-pvc
        persistentVolumeClaim:
          claimName: world-pvc
      - name: mc-config
        configMap:
          name: fabric-suzuhara-config
---
apiVersion: v1
kind: Service
metadata:
  name: fabric-suzuhara-beta-service
  namespace: minecraft
  annotations:
     mc.suzuhara.moe/deployment: minecraft
     mc.suzuhara.moe/stage: beta
spec:
  selector:
    app: fabric-suzuhara-beta
  ports:
    - protocol: TCP
      port: 25565
      targetPort: 25565
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fabric-suzuhara-beta-ingress
  namespace: minecraft
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: m0b.puffy-kubestg.ml
    http:
       paths:
         - path: /
           backend:
             serviceName: fabric-suzuhara-beta-service
             servicePort: 25565
