02-deployment-spigot-staging.yml
# Copyright 2020 (c) Ayane Satomi
# Published under CC0-Universal.
#
#
# Keep in mind this configuration is domain-specific, some things may not work in your end.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spigot-suzuhara-beta-deployment
  labels:
    app: spigot-suzuhara-beta
    namespace: minecraft
    annotations:
      mc.suzuhara.moe/deployment: minecraft
      mc.suzuhara.moe/stage: beta
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spigot-suzuhara-beta
  template:
    metadata:
      labels:
        app: spigot-suzuhara-beta
    spec:
      containers:
      - name: spigot-suzuhara-beta
        image: chinodesuuuu/suzuhara-mc:beta
        ports:
        - containerPort: 25565
    volumes:
      - name: mc-config
        configMap:
          name: spigot-suzuhara-config
      - name: world
        persistentVolumeClaim:
          claimName: world-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: spigot-suzuhara-beta-service
  namespace: minecraft
  annotations:
     mc.suzuhara.moe/deployment: minecraft
     mc.suzuhara.moe/stage: beta
spec:
  selector:
    app: spigot-suzuhara-beta
  ports:
    - protocol: TCP
      port: 25565
      targetPort: 25565
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spigot-suzuhara-beta-ingress
  namespace: minecraft
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: m0.puffy-kubestg.ml
    http:
       paths:
         - path: /
           backend:
             serviceName: spigot-suzuhara-beta-service
             servicePort: 25565
